@@ -643,3 +643,19 @@ input[type=checkbox].es_dlc_selection:checked + label {
 	text-decoration: underline;
 	cursor: pointer;
 }
+
+.browse_tag_game_cap img {
+	margin-left: 8px;
+}
+
+.browse_tag_game_name {
+	margin-left: 8px;
+}
+
+.browse_tag_game_price {
+	margin-left: 8px;
+}
+
+.browse_tag_game {
+	margin-bottom: 4px;
+}
