@@ -81,7 +81,7 @@ var localized_strings,
 			options_changelog: "Changelog:",
 			options_general: "General",
 			options_clear: "Are you sure you wish to reset all options? This cannot be undone.",
-			options_hide_owned: "Items you own in search results",
+			options_hide_owned: "Items you own in search results and tag pages",
 			options_hide_owned_homepage: "Items you own on the homepage",
 			options_hide_early_access: "Hide Early Access games on homepage, browse, and search pages",
 			regional_price: "Regional Price Comparison",
